// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C10 §4k — the compositions, as frames > case 1 — focused + selected + failed, at 1-bit 1`] = `
"-- the frame
    Name          State     
    alpha         ✓ running 
  ▸ bravo         ✗ failed                
    charlie       ✓ running 

-- which fact took the ground, run by run
  dim/-:"Name        " dim/-:"State     "
  page/-:"  alpha         " bold/-:"✓ running "
  inverse+bold/-:"▸ " inverse/-:"bravo         " inverse+bold/-:"✗ failed  "
  page/-:"  charlie       " bold/-:"✓ running "

-- without copy selection, run by run
  dim/-:"Name        " dim/-:"State     "
  page/-:"  alpha         " bold/-:"✓ running "
  bold/-:"▸ " page/-:"bravo         " bold/-:"✗ failed  "
  page/-:"  charlie       " bold/-:"✓ running "

-- without focus, run by run
  dim/-:"Name        " dim/-:"State     "
  page/-:"  alpha         " bold/-:"✓ running "
  inverse/-:"  bravo         " inverse+bold/-:"✗ failed  "
  page/-:"  charlie       " bold/-:"✓ running "

-- without failure, run by run
  dim/-:"Name        " dim/-:"State     "
  page/-:"  alpha         " bold/-:"✓ running "
  inverse+bold/-:"▸ " inverse/-:"bravo         " inverse+bold/-:"✓ running "
  page/-:"  charlie       " bold/-:"✓ running "

-- the ruling (C10 §4k.2 row 1)
  selection takes the ground · focus keeps its mark · failure keeps its glyph, its word and its tone

-- and what drawing it found, kept because the record is the point
  This frame reported two of row 1's three clauses for as long as it existed. A focused or
  selected row was repainted in ONE ink — accent, or default under selection — so \`failed\` kept
  ✗ and the word and lost the error tone. The two halves of the remedy were one change and
  neither worked alone: C11 I14's drop-to-one-ink rule, and a painter that resolves a tone
  against the surface it lands on. \`inkOn\` was that resolver and was called only from
  \`contrast.ts\` — 74 of 100 tone x surface pairs were an ink the gate checked and the painter
  never emitted. C10 I48 gives \`resolve\` the ground, \`inkOn\` is its composition step, and the
  ink beside each ground above is the value C10 T2.49 measures the gate against."
`;

exports[`C10 §4k — the compositions, as frames > case 1 — focused + selected + failed, at 24-bit 1`] = `
"-- the frame
    Name          State                   
    alpha         ✓ running 
  ▸ bravo         ✗ failed                
    charlie       ✓ running 

-- which fact took the ground, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"✓ running "
  selection/accent:"▸ " selection/default:"bravo       " selection/error:"✗ failed  "
  page/default:"charlie     " page/ok:"✓ running "

-- without copy selection, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"✓ running "
  focusGround/accent:"▸ " focusGround/default:"bravo       " focusGround/error:"✗ failed  "
  page/default:"charlie     " page/ok:"✓ running "

-- without focus, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"✓ running "
  selection/default:"bravo       " selection/error:"✗ failed  "
  page/default:"charlie     " page/ok:"✓ running "

-- without failure, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"✓ running "
  selection/accent:"▸ " selection/default:"bravo       " selection/ok:"✓ running "
  page/default:"charlie     " page/ok:"✓ running "

-- the ruling (C10 §4k.2 row 1)
  selection takes the ground · focus keeps its mark · failure keeps its glyph, its word and its tone

-- and what drawing it found, kept because the record is the point
  This frame reported two of row 1's three clauses for as long as it existed. A focused or
  selected row was repainted in ONE ink — accent, or default under selection — so \`failed\` kept
  ✗ and the word and lost the error tone. The two halves of the remedy were one change and
  neither worked alone: C11 I14's drop-to-one-ink rule, and a painter that resolves a tone
  against the surface it lands on. \`inkOn\` was that resolver and was called only from
  \`contrast.ts\` — 74 of 100 tone x surface pairs were an ink the gate checked and the painter
  never emitted. C10 I48 gives \`resolve\` the ground, \`inkOn\` is its composition step, and the
  ink beside each ground above is the value C10 T2.49 measures the gate against."
`;

exports[`C10 §4k — the compositions, as frames > case 1 — focused + selected + failed, at ascii 1`] = `
"-- the frame
    Name          State                   
    alpha         + running 
  > bravo         x failed                
    charlie       + running 

-- which fact took the ground, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"+ running "
  selection/accent:"> " selection/default:"bravo       " selection/error:"x failed  "
  page/default:"charlie     " page/ok:"+ running "

-- without copy selection, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"+ running "
  focusGround/accent:"> " focusGround/default:"bravo       " focusGround/error:"x failed  "
  page/default:"charlie     " page/ok:"+ running "

-- without focus, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"+ running "
  selection/default:"bravo       " selection/error:"x failed  "
  page/default:"charlie     " page/ok:"+ running "

-- without failure, run by run
  bgElev/muted:"Name        " bgElev/muted:"State     "
  page/default:"alpha       " page/ok:"+ running "
  selection/accent:"> " selection/default:"bravo       " selection/ok:"+ running "
  page/default:"charlie     " page/ok:"+ running "

-- the ruling (C10 §4k.2 row 1)
  selection takes the ground · focus keeps its mark · failure keeps its glyph, its word and its tone

-- and what drawing it found, kept because the record is the point
  This frame reported two of row 1's three clauses for as long as it existed. A focused or
  selected row was repainted in ONE ink — accent, or default under selection — so \`failed\` kept
  ✗ and the word and lost the error tone. The two halves of the remedy were one change and
  neither worked alone: C11 I14's drop-to-one-ink rule, and a painter that resolves a tone
  against the surface it lands on. \`inkOn\` was that resolver and was called only from
  \`contrast.ts\` — 74 of 100 tone x surface pairs were an ink the gate checked and the painter
  never emitted. C10 I48 gives \`resolve\` the ground, \`inkOn\` is its composition step, and the
  ink beside each ground above is the value C10 T2.49 measures the gate against."
`;

exports[`C10 §4k — the compositions, as frames > case 4 — focus over a heatmap ground, at 1-bit 1`] = `
"-- the frame
    one ┤⠄⠄⠄⠄⠄⠄⠄⠄⠄⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⣿⣿⣿⣿⣿⣿⣿⣿
    two ┤⣿⣿⣿⣿⣿⣿⣿⣿⣿⠷⠷⠷⠷⠷⠷⠷⠷⠔⠔⠔⠔⠔⠔⠔⠔⠄⠄⠄⠄⠄⠄⠄⠄
  three ┤⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷
  
  1 ⠄⠔⠖⠶⠷⠿⡿⣿ 16

-- which fact took the ground, run by run
  dim/-:"  one " bold/-:"┤" page/-:"⠄⠄⠄⠄⠄⠄⠄⠄⠄⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⣿⣿⣿⣿⣿⣿⣿⣿"
  dim/-:"  two " bold/-:"┤" page/-:"⣿⣿⣿⣿⣿⣿⣿⣿⣿⠷⠷⠷⠷⠷⠷⠷⠷⠔⠔⠔⠔⠔⠔⠔⠔⠄⠄⠄⠄⠄⠄⠄⠄"
  dim/-:"three " bold/-:"┤" page/-:"⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷"
  (blank)
  dim/-:"1 ⠄⠔⠖⠶⠷⠿⡿⣿ 16"

-- without focus, run by run
  dim/-:"  one ┤" page/-:"⠄⠄⠄⠄⠄⠄⠄⠄⠄⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⣿⣿⣿⣿⣿⣿⣿⣿"
  dim/-:"  two ┤" page/-:"⣿⣿⣿⣿⣿⣿⣿⣿⣿⠷⠷⠷⠷⠷⠷⠷⠷⠔⠔⠔⠔⠔⠔⠔⠔⠄⠄⠄⠄⠄⠄⠄⠄"
  dim/-:"three ┤" page/-:"⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷"
  (blank)
  dim/-:"1 ⠄⠔⠖⠶⠷⠿⡿⣿ 16"

-- without the data's own colour, run by run
  dim/-:"  one " bold/-:"┤" page/-:"⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶"
  dim/-:"  two " bold/-:"┤" page/-:"⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶"
  dim/-:"three " bold/-:"┤" page/-:"⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶⠶"
  (blank)
  dim/-:"4 ⠄⠔⠖⠶⠷⠿⡿⣿ 4"

-- the ruling (C10 §4k.2 row 4)
  nothing is contested · the border and the axes take the focus · the data keeps its reading"
`;

exports[`C10 §4k — the compositions, as frames > case 4 — focus over a heatmap ground, at 24-bit 1`] = `
"-- the frame
    one ┤                                 
    two ┤                                 
  three ┤                                 
  
  1          16

-- which fact took the ground, run by run
  page/muted:"  one " page/accent:"┤"
  page/muted:"  two " page/accent:"┤"
  page/muted:"three " page/accent:"┤"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- without focus, run by run
  page/muted:"  one ┤"
  page/muted:"  two ┤"
  page/muted:"three ┤"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- without the data's own colour, run by run
  page/muted:"  one " page/accent:"┤"
  page/muted:"  two " page/accent:"┤"
  page/muted:"three " page/accent:"┤"
  (blank)
  page/muted:"4 " page/muted:" 4"

-- the ruling (C10 §4k.2 row 4)
  nothing is contested · the border and the axes take the focus · the data keeps its reading"
`;

exports[`C10 §4k — the compositions, as frames > case 4 — focus over a heatmap ground, at ascii 1`] = `
"-- the frame
    one +                                 
    two +                                 
  three +                                 
  
  1          16

-- which fact took the ground, run by run
  page/muted:"  one " page/accent:"+"
  page/muted:"  two " page/accent:"+"
  page/muted:"three " page/accent:"+"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- without focus, run by run
  page/muted:"  one +"
  page/muted:"  two +"
  page/muted:"three +"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- without the data's own colour, run by run
  page/muted:"  one " page/accent:"+"
  page/muted:"  two " page/accent:"+"
  page/muted:"three " page/accent:"+"
  (blank)
  page/muted:"4 " page/muted:" 4"

-- the ruling (C10 §4k.2 row 4)
  nothing is contested · the border and the axes take the focus · the data keeps its reading"
`;

exports[`C10 §4k — the compositions, as frames > case 6 — stale + running, at 1-bit 1`] = `
"-- the frame
  ┌ ⠋ workers ────────────────── updated 4m ago ─┐
  │● pytest(tests/unit) · ⠋ 4s                   │
  └──────────────────────────────────────────────┘

-- which fact took the ground, run by run
  dim/-:"┌" bold/-:" ⠋ workers " dim/-:"──────────────────" bold/-:" updated 4m ago " dim/-:"─┐"
  dim/-:"│● pytest(tests/unit) · ⠋ 4s" dim/-:"│"
  dim/-:"└──────────────────────────────────────────────┘"

-- without freshness, run by run
  dim/-:"┌" bold/-:" ⠋ workers " dim/-:"───────────────────────────────────┐"
  dim/-:"│" page/-:"● pytest(tests/unit) · ⠋ 4s                   " dim/-:"│"
  dim/-:"└──────────────────────────────────────────────┘"

-- without liveness, run by run
  dim/-:"┌" bold/-:" ⠋ workers " dim/-:"──────────────────" bold/-:" updated 4m ago " dim/-:"─┐"
  dim/-:"│✓ pytest(tests/unit) · 4s · 47 passed" dim/-:"│"
  dim/-:"└──────────────────────────────────────────────┘"

-- the ruling (C10 §4k.2 row 6)
  nothing is contested · staleness dims the content and names its age · the spinner keeps the duration slot"
`;

exports[`C10 §4k — the compositions, as frames > case 6 — stale + running, at 24-bit 1`] = `
"-- the frame
  ┌ ⠋ workers ────────────────── updated 4m ago ─┐
  │● pytest(tests/unit) · ⠋ 4s                   │
  └──────────────────────────────────────────────┘

-- which fact took the ground, run by run
  page/dim:"┌" page/accent:" ⠋ workers " page/dim:"──────────────────" page/warn:" updated 4m ago " page/dim:"─┐"
  page/dim:"│● pytest(tests/unit) · ⠋ 4s" page/dim:"│"
  page/dim:"└──────────────────────────────────────────────┘"

-- without freshness, run by run
  page/dim:"┌" page/accent:" ⠋ workers " page/dim:"───────────────────────────────────┐"
  page/dim:"│" page/info:"● pytest(tests/unit) · ⠋ 4s" page/dim:"│"
  page/dim:"└──────────────────────────────────────────────┘"

-- without liveness, run by run
  page/dim:"┌" page/accent:" ⠋ workers " page/dim:"──────────────────" page/warn:" updated 4m ago " page/dim:"─┐"
  page/dim:"│● pytest(tests/unit) · 4s · 47 passed" page/dim:"│"
  page/dim:"└──────────────────────────────────────────────┘"

-- the ruling (C10 §4k.2 row 6)
  nothing is contested · staleness dims the content and names its age · the spinner keeps the duration slot"
`;

exports[`C10 §4k — the compositions, as frames > case 6 — stale + running, at ascii 1`] = `
"-- the frame
  + | workers ------------------ updated 4m ago -+
  |* pytest(tests/unit) : | 4s                   |
  +----------------------------------------------+

-- which fact took the ground, run by run
  page/dim:"+" page/accent:" | workers " page/dim:"------------------" page/warn:" updated 4m ago " page/dim:"-+"
  page/dim:"|* pytest(tests/unit) : | 4s" page/dim:"|"
  page/dim:"+----------------------------------------------+"

-- without freshness, run by run
  page/dim:"+" page/accent:" | workers " page/dim:"-----------------------------------+"
  page/dim:"|" page/info:"* pytest(tests/unit) : | 4s" page/dim:"|"
  page/dim:"+----------------------------------------------+"

-- without liveness, run by run
  page/dim:"+" page/accent:" | workers " page/dim:"------------------" page/warn:" updated 4m ago " page/dim:"-+"
  page/dim:"|+ pytest(tests/unit) : 4s : 47 passed" page/dim:"|"
  page/dim:"+----------------------------------------------+"

-- the ruling (C10 §4k.2 row 6)
  nothing is contested · staleness dims the content and names its age · the spinner keeps the duration slot"
`;

exports[`C10 §4k — the compositions, as frames > the owed compositions name the change that would give each a subject 1`] = `
"2 · hovering one link while another has keyboard focus
    no render seam carries a hover: the router discards a no-button move by rule (C16 §4a row t) and RenderContext has no field for it (M7)
3 · selection over a diff ground
    \`patch\` declares no elements and reads ctx.focus nowhere, so no patch row can be selected (C25, M9)
5 · disabled + error
    \`disabled\` is an availability fact and no block carries the field (M4)"
`;
